<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.lorencity.fotoesgoto.PhotoDataScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_foto_tirar"
        android:id="@+id/labelFoto"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/label_form_size"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/labelGaleria"
        android:layout_alignStart="@+id/labelGaleria" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_foto_galeria"
        android:id="@+id/labelGaleria"
        android:textSize="@dimen/label_form_size"
        android:layout_marginTop="60dp"
        android:textStyle="bold"
        android:layout_below="@+id/btnCamera"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_label_camera"
        android:id="@+id/btnCamera"
        android:textSize="@dimen/button_font_size"
        android:padding="20dp"
        android:layout_below="@+id/labelFoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_label_galeria"
        android:id="@+id/btnGaleria"
        android:textSize="@dimen/button_font_size"
        android:padding="20dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/labelGaleria"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_label_avancar"
        android:id="@+id/btnAvancar2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/button_font_size"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
